test/files/neg/t10296-warn.check
Unused_2.scala:13: warning: private method fixme macro defs are eliminated at refchecks in object Unused is never used
  private def `fixme macro defs are eliminated at refchecks` = println("Restore macro warnings")
              ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
